--- a/index.html
+++ b/index.html
@@ -1,23 +1,10 @@
-<!--calculadora online-->
-<!DOCTYPE html>
-<html lang="es">
-<link rel="stylesheet" href="style.css">    
+<!Doctype html>
+<html>
 <head>
-<title>Calculadora</title>
-<script src="script.js" defer></script>    
+<tittle>Programacio</title>
 </head>
 <body>
-<h2>calculadora</h2>
-<p>Introduce dos numeros a operar:</p>
-<input id="num1" type="number"><br><br>
-<input id="num2" type="number"><br><br>
-
-<!--introducimos los boton +-*/-->
-<button id="sum">sum</button>
-<button id="rest">rest</button>
-<button id="mult">mult</button>
-<button id="div">div</button>
-
-<h3>Resultado:</h3>
-<h3 id="resultado"></h3>
+<h1>WEB</h1>
+<a href="http://iesramonllull.net">Calculadora</a>
 </body>
+</html>
