--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 </head>
 <body>
 <h1>WEB</h1>
-<a href="http://iesramonllull.net">Calculadora</a>
+<a href="http://file:///C:/Users/alumne1/Downloads/index.html>Calculadora</a>
 </body>
 </html>
+
