--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 </head>
 <body>
 <h1>WEB</h1>
-<a href="http://file:///C:/https://>Calculadora</a>
+<a href="http://file:///C:/https://https://github.com/danielcito22/danielcito22/tree/main/ptd>Calculadora</a>
 </body>
 </html>
+
 
 
