--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
 </head>
 <body>
 <h1>WEB</h1>
-<a href="http://file:///C:/https://https://github.com/danielcito22/danielcito22/tree/main/ptd>Calculadora</a>
+<a href="https://danielcito22.github.io/danielcito22/ptd/calc.html">Calculadora</a>
 </body>
 </html>
+
 
 
 
